<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:background="@drawable/blue_to_yellow"
        android:backgroundTint="@color/ic_launcher_background"
        android:fontFamily="@font/alata"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="32dp"
        android:background="@drawable/blue_to_yellow"
        android:backgroundTint="@color/ic_launcher_background"
        android:fontFamily="@font/alata"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/alata"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="246dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.caverock.androidsvg.SVGImageView
            android:id="@+id/my_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:foreground="@drawable/loginactivity_horizontal"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="259dp"
            android:layout_height="80dp"

            android:layout_marginStart="85dp"
            android:layout_marginTop="120dp"

            android:fontFamily="@font/alata"

            android:text="catch me"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="46dp"

            app:layout_constraintBottom_toTopOf="@+id/top"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.896" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="259dp"
            android:layout_height="80dp"

            android:layout_marginStart="85dp"
            android:layout_marginTop="120dp"

            android:fontFamily="@font/alata"

            android:text="if you scan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="46dp"

            app:layout_constraintBottom_toTopOf="@+id/top"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="536dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
